--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "friends_dj_back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./index.ts",
-    "watch": "nodemon ./index.ts",
+    "start": "node ./index.js",
+    "watch": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
